tests/fixtures/syntax/invalid/document_file_title_workspace_path_literal.repor
# `title` requires a string literal; a workspace path literal parses at the
# grammar level and is rejected as a literal kind mismatch
# (semantic.literal.kind_mismatch).
document file {
  title <"a.txt">
}
